# merge3

./: .gitignore  .travis.yml  AUTHORS  MANIFEST.in  README.rst  disperse.conf  disperse.toml  pyproject.toml  releaser.conf  setup.cfg  setup.py  test_merge3.py  tox.ini
.github/workflows/: pythonpackage.yml  wheels.yaml
debian/: changelog  control  copyright  watch
debian/patches/: failing-test.diff  series
debian/tests/: control
debian/upstream/: metadata
merge3/: __init__.py  __main__.py  test_merge3.py
merge3.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
