[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "merge3"
description = "Python implementation of 3-way merge"
maintainers = [{name = "Breezy Developers", email = "team@breezy-vcs.org"}]
license = "GPL-2.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: POSIX",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = []

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://www.breezy-vcs.org/"
GitHub = "https://github.com/breezy-team/merge3"

[project.optional-dependencies]
"dev" = [
    "ruff==0.14.3",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["merge3"]
include-package-data = false

[tool.setuptools.package-data]
merge3 = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "merge3.__version__"}

[project.scripts]
merge3 = "merge3.__main__:main"

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
select = [
    "ANN",
    "D",
    "E",
    "F",
    "I",
    "UP",
]
ignore = [
    "ANN001",
    "ANN201",
    "ANN202",
    "ANN205",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D415",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_no_return = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
strict_equality = true
strict = true
