[metadata]
name = merge3
description = Python implementation of 3-way merge
long_description = file:README.rst
long_description_content_type = text/x-rst
version = attr:merge3.__version__
maintainer = Breezy Developers
maintainer_email = team@breezy-vcs.org
license = GNU GPLv2 or later
url = https://www.breezy-vcs.org/
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
project_urls =
    GitHub=https://github.com/breezy-team/merge3

[options]
packages = merge3
